[gd_scene load_steps=3 format=3 uid="uid://bv8fxm4n5q2t"]

[ext_resource type="Script" path="res://scripts/ui/victory_screen.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 0.5)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VictoryPanel" type="Panel" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(600, 400)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VictoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20
offset_top = 20
offset_right = -20
offset_bottom = -20

[node name="Title" type="Label" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamLabel" type="Label" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Team 1 Wins!"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VictoryMessage" type="Label" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "All 9 control nodes captured!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Statistics" type="VBoxContainer" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2

[node name="MatchDuration" type="Label" parent="CenterContainer/VictoryPanel/VBoxContainer/Statistics"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Match Duration: 5:23"
horizontal_alignment = 1

[node name="NodesControlled" type="Label" parent="CenterContainer/VictoryPanel/VBoxContainer/Statistics"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Final Control: 9 vs 0"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VictoryPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VictoryPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
theme_override_font_sizes/font_size = 20
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VictoryPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
theme_override_font_sizes/font_size = 20
text = "Main Menu" 